Fix IntelliJ suggested style issues in clients and tests (#320)
(1) Removed unused throw, import. (2) Replaced Arrays.asList() with Collections.singletonList(). (3) Replaced lambda statement with lambda expression. (4) Removed curly braces for one-liner. (5) Replaced Arrays.asList().stream() with Arrays.stream(). (6)Replaced lambda with method reference. (7) Improved list initialization.